2001-08-27  Glenn F. Maynard <g_ld@zewt.org>

	* FileSet.cc, FileSet.h, FileAccess.h, CmdExec.cc: remove the FileSet
	  sort stuff.  It's superfluous now.
	* commands.cc: fix a minor UI bug with queue -d.

2001-08-22  Alexander V. Lukyanov  <lav@yars.free.net>

	* FtpListInfo.cc: remove erroneous assert, handle error.
	* ftpclass.cc, ftpclass.h: (home_auto) new member; support ftp:home
	  variable.
	* resource.cc: add ftp:home, update ftp:retry-530.
	* ResMgr.cc: verify default value with supplied validator.

2001-08-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* resource.cc: fixed ftp:ssl-auth validation.
	* ftpclass.cc: improve abort for passive mode - connect data socket
	  if it is not connected yet.

2001-08-16  Wolfram Gloger <Wolfram.Gloger@dent.med.uni-muenchen.de>

	* FileSet.cc: include stdlib.h; use labs instead of abs.

2001-08-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ResMgr.cc: declare inet_aton if needed.

2001-08-07  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: fix memory allocation error.

2001-07-30  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: format queue help at 80 columns.
	* Resolver.cc: little correction for RAND_MAX.
	* Speedometer.cc: call Get once, maybe fix for math exception.

2001-07-26  Glenn F. Maynard <g_ld@zewt.org>

	* CmdExec.cc, CmdExec.h, Job.cc, Makefile.am, commands.cc: queue
	  editing support (QueueFeeder class).
	* QueueFeeder.cc, QueueFeeder.h: new files.

2001-07-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* FtpSplitList.cc: fix mem leak (reported by Glenn F. Maynard).
	* ftpclass.cc: break normal execution if Error().
	* Http.cc: workaround for range end ==-1.

2001-07-24  Glenn F. Maynard <g_ld@zewt.org>

	* FileAccess.cc: make url protocol case insensitive.

2001-07-24  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: fix CONNECT_VERIFY in case of borrowed connection.
	* commands.cc: check find -d argument for being a number.
